My-Develop-Job에 step 추가(1)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,3 +16,8 @@ jobs:
     steps:
       - name: Hello World 출력하기 # Step의 이름
         run: echo "Hello World" # 실행시킬 명령어
+
+      - name: 여러 명령어 문장 작성하기
+        run: |
+          echo "Good"
+          echo "Morning"
