repository 파일 출력하는 step 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,3 +12,6 @@ jobs:
       - name: Github Repository 파일 불러오기
         # github 라이브러리 checkout 사용
         uses: actions/checkout@v4
+
+      - name: Repository 파일 출력하기
+        run: ls
