--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: S3 기존 파일들 전체 삭제
+        # 250528-facebook-web : S3에서의 배포명
         run: aws s3 rm --recursive s3://250528-facebook-web
 
       - name: S3에 빌드된 파일 업로드하기
         run: aws s3 cp ./dist s3://250528-facebook-web/ --recursive
+
+      - name: CloudFront 캐시 무효화
+        # --distribution-id 배포ID
+        run: aws cloudfront create-invalidation E233UE5GOZVBDT --paths "/*"
