--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,4 +35,4 @@ jobs:
 
       - name: CloudFront 캐시 무효화
         # --distribution-id 배포ID
-        run: aws cloudfront create-invalidation E233UE5GOZVBDT --paths "/*"
+        run: ws cloudfront create-invalidation --distribution-id E233UE5GOZVBDT --paths "/*"
